test/distributions/bradc/wrongDomForDist/wrongType2.good
wrongType2.chpl:5: error: opaque domains not supported by this distribution
